--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.19)
 project(reading-tracker LANGUAGES CXX)
 
-find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
+find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Sql)
 
 qt_standard_project_setup()
 
@@ -11,12 +11,14 @@ qt_add_executable(reading-tracker
     mainwindow.cpp
     mainwindow.h
     mainwindow.ui
+    databasemanager.h databasemanager.cpp
 )
 
 target_link_libraries(reading-tracker
     PRIVATE
         Qt::Core
         Qt::Widgets
+        Qt::Sql
 )
 
 include(GNUInstallDirs)
